# guardrail-comp-theory

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
examples/: experiment_synthetic.py
src/certify/: __init__.py  causal.py  fh.py  lipschitz.py  pac.py  trilemma.py
tests/: test_causal.py  test_fh.py  test_lipschitz.py  test_pac.py  test_trilemma.py
theory/: main.tex  preamble.tex
theory/chapters/: 01_intro.tex  02_fh_bounds.tex  03_trilemma.tex  04_lipschitz_tax.tex  05_pac_robust.tex  06_causal.tex
